uploading templates and images (HTML).

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,21 +1,45 @@
-
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <title>Welcome Page</title>
-
-
+    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+    <title>Proyecto Atmósfera</title>
+    <style>
+        body{background:#ffce99;
+            font-size:17px;
+            color:black;
+            padding:40px;
+            border:6px solid white;}
+        h1{color:brown;}
+    </style>
 </head>
-<body>
-<h1>Heading aqui</h1>
 
-<p style="color: #ff5f40">This is paragraph</p>
+<div style="text-align: center;"><h1>BIENVENIDOS!</h1></div>
+<h2>Temática</h2>
+<style>
+    h2 {color:gray;}
+</style>
+<div style="text-align: justify-all;"><p>Contaminación del aire en Temuco, mediante la
+    utilización de datos provistos por el proyecto Smart City in a box, CEIS UFRO.</p></div>
 
-<h1>Heading aqui</h1>
+<div id="apDiv1">
+    <table width="100%" border="0">
+        <tr>
+            <td><img src="foto1.jpg" align="left" width="auto" height="280"></td>
+            <td><img src="foto2.jpg" align="center" width="auto" height="280"></td>
+            <td><img src="foto3.jpg" align="right" width="auto" height="280"></td>
+        </tr>
+    </table>
+</div>
+
+<h2>Pregunta a resolver</h2>
+<style>
+    h3 {color:gray;}
+</style>
+<div style="text-align: justify-all;"><p>¿Existe una (o más) franja(s) horaria donde el valor de
+    la concentración de contaminación supere un valor determinado?</p></div>
+
+<div style="text-align: center;"><button name="button" onclick="location.href='/PáginaBienvenida/HTML/pagina1.html';">Siguiente</button></div>
 
 </body>
 </html>
-
------------
 
