--- a/src/main/resources/templates/pagina1.html
+++ b/src/main/resources/templates/pagina1.html
@@ -166,6 +166,8 @@
         }
 
     </style>
+
+
 </head>
 <body>
 
@@ -334,7 +336,7 @@
             </div>
 
             <div align="right" style="width: 400px; height: 350px">
-                <img src="nivelContaminacion.png" alt="Nivel de contaminación" width="400" height="350" vspace="50" /></a>
+                <img src="https://i.ibb.co/5hjGyqv/nivel-Contaminacion.png" alt="Nivel de contaminación" width="400" height="350" vspace="50" /></a>
             </div>
         </div>
     </div>
