--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,45 +1,304 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en" xmlns:th="http://www.thymeleaf.org/">
 <head>
-    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-    <title>Proyecto Atmósfera</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.1/themes/base/jquery-ui.css"/>
+    <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
+    <script src="http://code.jquery.com/ui/1.10.1/jquery-ui.js"></script>
+    <header>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    </header>
+    <meta charset="UTF-8">
+
+    <!-- CSS para los containers -->
     <style>
-        body{background:#ffce99;
-            font-size:17px;
-            color:black;
-            padding:40px;
-            border:6px solid white;}
-        h1{color:brown;}
+        .slidecontainer {
+            width: 100%;
+        }
+
+        .slider {
+            -webkit-appearance: slider-vertical;
+            width: 100%;
+            height: 345px;
+            background: #d3d3d3;
+            outline: none;
+            opacity: 0.7;
+            -webkit-transition: .2s;
+            transition: opacity .2s;
+        }
+
+        .slider:hover {
+            opacity: 1;
+        }
+
+        .slider::-webkit-slider-thumb {
+            -webkit-appearance: none;
+            appearance: none;
+            width: 25px;
+            height: 25px;
+            background: #4CAF50;
+            cursor: pointer;
+        }
+
+        .slider::-moz-range-thumb {
+            width: 25px;
+            height: 25px;
+            background: #4CAF50;
+            cursor: pointer;
+        }
+
+        #containerCentralIzquierdo {
+            display: flex;
+            flex-direction: row;
+            flex-wrap: nowrap;
+            justify-content: space-between;
+            background-color: #1c7cc6;
+            height: 575px;
+        }
+
+        #containerCentralDerecho {
+            display: flex;
+            flex-direction: row;
+            flex-wrap: nowrap;
+            justify-content: space-between;
+            background-color: #1c7cc6;
+            height: 575px;
+        }
+
+        #containerSuperior {
+            display: flex;
+            flex-direction: row;
+            flex-wrap: nowrap;
+            justify-content: space-between;
+            background-color: #042783;
+            align-items: flex-end;
+        }
+
+        #containerSuperiorIzquierdo {
+            display: flex;
+            float: left;
+            flex-direction: row;
+            flex-wrap: nowrap;
+            justify-content: space-between;
+            background-color: #042783;
+            height: 40px;
+        }
+
+        #containerSuperiorCentral {
+            display: flex;
+            flex-direction: row;
+            flex-wrap: nowrap;
+            justify-content: space-between;
+            background-color: #042783;
+        }
+
+        #containerSuperiorDerecho {
+            display: flex;
+
+            flex-direction: column;
+            flex-wrap: nowrap;
+            justify-content: space-between;
+            background-color: #042783;
+            height: 40px;
+        }
+
+        /*container para el scroll de la tabla*/
+        #div1 {
+            overflow: scroll;
+            height: 575px;
+        }
+
+        /* The switch - the box around the slider */
+        .switch {
+            position: relative;
+            display: inline-block;
+            width: 60px;
+            height: 34px;
+        }
+
+        /* Hide default HTML checkbox */
+        .switch input {
+            opacity: 0;
+            width: 0;
+            height: 0;
+        }
+
+        /* The slider */
+        .slider2 {
+            position: absolute;
+            cursor: pointer;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background-color: greenyellow;
+            -webkit-transition: .4s;
+            transition: .4s;
+        }
+
+        .slider2:before {
+            position: absolute;
+            content: "MP2.5";
+            height: 26px;
+            width: 26px;
+            left: 4px;
+            bottom: 4px;
+            background-color: white;
+            -webkit-transition: .4s;
+            transition: .4s;
+        }
+
+        input:checked + .slider2 {
+            background-color: #2196F3;
+        }
+
+        input:focus + .slider2 {
+            box-shadow: 0 0 1px #2196F3;
+        }
+
+        input:checked + .slider2:before {
+            -webkit-transform: translateX(26px);
+            -ms-transform: translateX(26px);
+            transform: translateX(26px);
+            content: "MP10";
+        }
+
+        /* Rounded sliders */
+        .slider2.round {
+            border-radius: 34px;
+        }
+
+        .slider2.round:before {
+            border-radius: 50%;
+        }
+
     </style>
+
+
 </head>
+<body>
 
-<div style="text-align: center;"><h1>BIENVENIDOS!</h1></div>
-<h2>Temática</h2>
-<style>
-    h2 {color:gray;}
-</style>
-<div style="text-align: justify-all;"><p>Contaminación del aire en Temuco, mediante la
-    utilización de datos provistos por el proyecto Smart City in a box, CEIS UFRO.</p></div>
+<div id="containerSuperior">
 
-<div id="apDiv1">
-    <table width="100%" border="0">
-        <tr>
-            <td><img src="foto1.jpg" align="left" width="auto" height="280"></td>
-            <td><img src="foto2.jpg" align="center" width="auto" height="280"></td>
-            <td><img src="foto3.jpg" align="right" width="auto" height="280"></td>
-        </tr>
-    </table>
+    <div id="containerSuperiorIzquierdo">
+        <div>
+            <select name="Sector" style="width:145px">
+                <option value="" selected disabled hidden>Seleccione sector</option>
+
+                <option>Todos los sectores</option>
+
+                <option>Amanecer</option>
+
+                <option>Centro</option>
+
+                <option>Pedro de Valdivia</option>
+
+                <option>Universidad</option>
+
+                <option>Sta. Rosa</option>
+
+            </select>
+        </div>
+    </div>
+
+    <div id="containerSuperiorCentral">
+        <h1 style="color: white;width: 0px">Temuco</h1>
+    </div>
+
+    <div id="containerSuperiorDerecho">
+        <div>
+            <input type="text" id="datepicker"/>
+        </div>
+
+    </div>
+
 </div>
 
-<h2>Pregunta a resolver</h2>
-<style>
-    h3 {color:gray;}
-</style>
-<div style="text-align: justify-all;"><p>¿Existe una (o más) franja(s) horaria donde el valor de
-    la concentración de contaminación supere un valor determinado?</p></div>
+<div id="containerCentralIzquierdo">
 
-<div style="text-align: center;"><button name="button" onclick="location.href='/PáginaBienvenida/HTML/pagina1.html';">Siguiente</button></div>
+    <div id="div1" align="left" style="width:750px">
+
+
+        <table class="table table-striped">
+            <tr>
+                <th>Franja Horaria</th>
+                <th>Veces superadas</th>
+
+
+            </tr>
+            <tr th:each="array: ${array}">
+                <td th:text="${array[0]}"/>
+                <td th:text="${array[1]}"/>
+
+            </tr>
+
+            <!-- intento de hacer la cosa
+            <tr th:each="array: ${registros}">
+                <td th:text="${array.contarValor(100,array,'30/04/2019','MP10')[0]}"/>
+                <td th:text="${array.contarValor(100,array,'30/04/2019','MP10')[1]}"/>
+
+            </tr> -->
+
+
+        </table>
+
+    </div>
+
+    <div align="right">
+
+        <div id="containerCentralDerecho">
+            <div align="left">
+                <div>
+                    <label class="switch">
+                        <input type="checkbox">
+                        <span class="slider2 round"></span>
+                    </label>
+                    <div class="slidecontainer">
+                        <input type="range" orient="vertical" min="0" max="300" value="150" class="slider" id="myRange">
+                        <p align="center">Valor: <span id="demo"></span></p>
+                    </div>
+                </div>
+            </div>
+
+            <div align="right" style="width: 400px; height: 350px">
+                <img src="https://i.ibb.co/5hjGyqv/nivel-Contaminacion.png" alt="Nivel de contaminación" width="400"
+                     height="350" vspace="50"/></a>
+            </div>
+
+            <div>
+                <div style="text-align: center;"><button name="button" onclick="location.href='/tabla';">Mostrar registros</button></div>
+            </div>
+        </div>
+    </div>
+
+</div>
+<!-- Script para la barra deslizadora -->
+<script>
+    var slider = document.getElementById("myRange");
+    var output = document.getElementById("demo");
+    output.innerHTML = slider.value;
+
+    slider.oninput = function () {
+        output.innerHTML = this.value;
+    }
+</script>
+<!-- Script para el selector de fecha -->
+<script>
+    $(function () {
+        $("#datepicker").datepicker();
+    });
+</script>
+<!-- Script para elegir MP2.5 o MP10 -->
+<script>
+    function myFunction() {
+        var x = document.getElementById("myDIV");
+        if (x.innerHTML === "Hello") {
+            x.innerHTML = "Swapped text!";
+        } else {
+            x.innerHTML = "Hello";
+        }
+    }
+</script>
 
 </body>
 </html>
-
