Reestructuración Página con Bootstrap

--- a/src/main/resources/templates/bienvenida.html
+++ b/src/main/resources/templates/bienvenida.html
@@ -24,9 +24,9 @@
 <div id="apDiv1">
     <table width="100%" border="0">
         <tr>
-            <td><img src="foto1.jpg" align="left" width="auto" height="280"></td>
-            <td><img src="foto2.jpg" align="center" width="auto" height="280"></td>
-            <td><img src="foto3.jpg" align="right" width="auto" height="280"></td>
+            <td><img src="img/foto1.jpg" align="left" width="auto" height="280"></td>
+            <td><img src="img/foto2.jpg" align="center" width="auto" height="280"></td>
+            <td><img src="img/foto3.jpg" align="right" width="auto" height="280"></td>
         </tr>
     </table>
 </div>
