--- a/src/main/resources/templates/PaginaBootstrap.html
+++ b/src/main/resources/templates/PaginaBootstrap.html
@@ -15,12 +15,12 @@
 <body>
 <header>
     <div class="card border-light">
-        <img src="img/header.jpg" class="card-img-top" style="position: absolute" height="100%">
+        <img src="https://i.ibb.co/YkR86cr/header.jpg" class="card-img-top" style="position: absolute" height="100%">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-3">
                     <div class="logoUfro">
-                       <a href="http://www.ufro.cl"><img src="img/logoUfro.png" class="img-fluid" width="30%" height="30%" href="www.ufro.cl"
+                       <a href="http://www.ufro.cl"><img src="https://i.ibb.co/TPypKVy/logoUfro.png" class="img-fluid" width="30%" height="30%" href="www.ufro.cl"
                                style="margin-top: 2%;margin-bottom: 2%; position: relative;"></a>
                     </div>
                 </div>
@@ -53,11 +53,11 @@
 
 <section id="EspecificacionesProyecto">
     <div class="container-fluid">
-        <img src="img/header.jpg" class="card-img-top" style="position: absolute" height="100%">
+        <img src="https://i.ibb.co/YkR86cr/header.jpg" class="card-img-top" style="position: absolute" height="100%">
         <div class="row">
             <div class="col-md-8" style="padding: 0px">
                 <div class="imagenContaminacion">
-                    <img src="img/foto1.jpg" class="img-fluid" alt="Responsive image">
+                    <img src="https://i.ibb.co/CPwv2Nx/foto1.jpg" class="img-fluid" alt="Responsive image">
                 </div>
             </div>
             <div class="col-md-4">
@@ -82,7 +82,7 @@
 
 <section id="HerramientaGrafica">
     <div class="container-fluid">
-        <img src="img/header.jpg" class="card-img-top" style="position: absolute" height="100%">
+        <img src="https://i.ibb.co/YkR86cr/header.jpg" class="card-img-top" style="position: absolute" height="100%">
         <div class="row">
             <div class="col-md-4" style="padding: 2%">
                 <div class="texto">
@@ -100,7 +100,7 @@
             </div>
             <div class="col-md-8">
                 <div class="imagenGrafico">
-                    <img src="img/Heatmap.png" class="img-fluid" style="width: 100%">
+                    <img src="https://i.ibb.co/d5PJGcn/Heatmap.png" class="img-fluid" style="width: 100%">
                 </div>
             </div>
         </div>
@@ -109,7 +109,7 @@
 
 <footer id="footer">
     <div class="card border-light">
-        <img src="img/header.jpg" class="card-img-top" style="position: absolute" height="100%">
+        <img src="https://i.ibb.co/YkR86cr/header.jpg" class="card-img-top" style="position: absolute" height="100%">
     <div class="container-fluid">
         <div class="col-md-9" style="padding: 3%;margin-left: 10%;" align="center">
             <ul style="list-style: none;">
