--- a/src/main/resources/templates/PaginaBienvenidaBootstrap.html
+++ b/src/main/resources/templates/PaginaBienvenidaBootstrap.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://unpkg.com/scrollreveal"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="CSS/main.css">
 </head>
 
@@ -26,7 +27,7 @@
                 </div>
                 <div class="col-md-9">
                     <div class="Cabezera" style="margin-top: 3%;margin-left: 13%;font-family: 'Verdana';font-style: normal">
-                        <h1>Contaminación Araucanía</h1>
+                        <h1>PROYECTO ATMÓSFERA</h1>
                     </div>
                 </div>
             </div>
@@ -45,21 +46,19 @@
                 </button>
             </li>
             <li class="nav-item">
+                <a class="nav-link" href="/PaginaGraficoBootstrap.html">Heatmap</a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link" href="#abajo">¿Quiénes somos?</a>
             </li>
         </ul>
     </div>
 </nav>
 
-<section id="EspecificacionesProyecto">
+<section id="Tematica">
     <div class="container-fluid">
-        <img src="img/header.jpg" class="card-img-top" style="position: absolute" height="100%">
         <div class="row">
-            <div class="col-md-8" style="padding: 0px">
-                <div class="imagenContaminacion">
-                    <img src="img/foto1.jpg" class="img-fluid" alt="Responsive image">
-                </div>
-            </div>
+            <img src="img/header.jpg" class="img-fluid" style="position: absolute;max-width: 100%" height="auto">
             <div class="col-md-4">
                 <div class="contenedor-right mt-5 ml-2">
                     <h2>Temática</h2>
@@ -76,14 +75,26 @@
                         de un heatmap (mapa de calor). </p>
                 </div>
             </div>
+
+            <div class="col-md-8" style="padding: 0px">
+                <div class="imagenContaminacion">
+                    <img src="img/foto1.jpg" class="img-fluid" alt="Responsive image">
+                </div>
+            </div>
+
         </div>
     </div>
 </section>
 
 <section id="HerramientaGrafica">
     <div class="container-fluid">
-        <img src="img/header.jpg" class="card-img-top" style="position: absolute" height="100%">
         <div class="row">
+            <img src="img/header.jpg" class="img-fluid" style="position: absolute;max-width: 100%" height="100%">
+            <div class="col-md-8">
+                <div class="imagenGrafico">
+                    <img src="img/Heatmap.png" class="img-fluid">
+                </div>
+            </div>
             <div class="col-md-4" style="padding: 2%">
                 <div class="texto">
                     <h2>Herramienta gráfica (Mock-up)</h2>
@@ -95,12 +106,7 @@
                         error laboriosam alias? Placeat, omnis.</p>
                 </div>
                 <div class="button" align="center" style="margin-top: 7%">
-                    <button type="button" class="btn btn-primary btn-lg btn-light" style="background-color: white">Ir al Heatmap</button>
-                </div>
-            </div>
-            <div class="col-md-8">
-                <div class="imagenGrafico">
-                    <img src="img/Heatmap.png" class="img-fluid" style="width: 100%">
+                    <button type="button" class="btn btn-primary btn-lg btn-light" style="background-color: white" onclick="location.href='/PaginaGraficoBootstrap.html'">Ir al Heatmap</button>
                 </div>
             </div>
         </div>
