Reestructuración Página de bienvenida con Bootstrap e inicio de Pagina con botones y gráfico

--- a/src/main/resources/templates/PaginaBienvenidaBootstrap.html
+++ b/src/main/resources/templates/PaginaBienvenidaBootstrap.html
@@ -26,7 +26,7 @@
                 </div>
                 <div class="col-md-9">
                     <div class="Cabezera" style="margin-top: 3%;margin-left: 13%;font-family: 'Verdana';font-style: normal">
-                        <h1>Contaminación Araucanía</h1>
+                        <h1>PROYECTO ATMÓSFERA</h1>
                     </div>
                 </div>
             </div>
@@ -45,21 +45,19 @@
                 </button>
             </li>
             <li class="nav-item">
+                <a class="nav-link" href="/PaginaGraficoBootstrap.html">HeatMap</a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link" href="#abajo">¿Quiénes somos?</a>
             </li>
         </ul>
     </div>
 </nav>
 
-<section id="EspecificacionesProyecto">
+<section id="Temática">
     <div class="container-fluid">
-        <img src="https://i.ibb.co/YkR86cr/header.jpg" class="card-img-top" style="position: absolute" height="100%">
+        <img src="https://i.ibb.co/YkR86cr/header.jpg" class="img-fluid" style="position: absolute" height="100%">
         <div class="row">
-            <div class="col-md-8" style="padding: 0px">
-                <div class="imagenContaminacion">
-                    <img src="https://i.ibb.co/CPwv2Nx/foto1.jpg" class="img-fluid" alt="Responsive image">
-                </div>
-            </div>
             <div class="col-md-4">
                 <div class="contenedor-right mt-5 ml-2">
                     <h2>Temática</h2>
@@ -76,14 +74,25 @@
                         de un heatmap (mapa de calor). </p>
                 </div>
             </div>
+            <div class="col-md-8" style="padding: 0px">
+                <div class="imagenContaminacion">
+                    <img src="https://i.ibb.co/CPwv2Nx/foto1.jpg" class="img-fluid" alt="Responsive image">
+                </div>
+            </div>
+
         </div>
     </div>
 </section>
 
 <section id="HerramientaGrafica">
     <div class="container-fluid">
-        <img src="https://i.ibb.co/YkR86cr/header.jpg" class="card-img-top" style="position: absolute" height="100%">
+        <img src="https://i.ibb.co/YkR86cr/header.jpg" class="img-fluid" style="position: absolute" height="100%">
         <div class="row">
+            <div class="col-md-8">
+                <div class="imagenGrafico">
+                    <img src="https://i.ibb.co/d5PJGcn/Heatmap.png" class="img-fluid" style="width: 100%">
+                </div>
+            </div>
             <div class="col-md-4" style="padding: 2%">
                 <div class="texto">
                     <h2>Herramienta gráfica (Mock-up)</h2>
@@ -96,11 +105,6 @@
                 </div>
                 <div class="button" align="center" style="margin-top: 7%">
                     <button type="button" class="btn btn-primary btn-lg btn-light" style="background-color: white">Ir al Heatmap</button>
-                </div>
-            </div>
-            <div class="col-md-8">
-                <div class="imagenGrafico">
-                    <img src="https://i.ibb.co/d5PJGcn/Heatmap.png" class="img-fluid" style="width: 100%">
                 </div>
             </div>
         </div>
