--- a/src/main/resources/templates/PaginaGraficoBootstrap.html
+++ b/src/main/resources/templates/PaginaGraficoBootstrap.html
@@ -11,6 +11,11 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="CSS/main.css">
     <style>
+        body {
+            font-family: 'Titillium Web', sans-serif;
+            background-color: #25bcb2;
+
+        }
         .navbar{
             margin: 0%;
             padding: 0;
